fix spacing

--- a/floodwatch/src/sass/pages/compare.scss
+++ b/floodwatch/src/sass/pages/compare.scss
@@ -3,6 +3,7 @@
 	.sentence {
 		line-height: 1.3;
 		font-weight: bold;
+		margin-bottom: 10px;
 
 		&.left-sentence {
 			text-align: right;
@@ -14,8 +15,13 @@
 	}
 
 	.chart {
+		&-sentence {
+			margin-top: 0px;
+		}
+
 		&-actions {
 			text-align: center;
+			margin-bottom: 30px;
 
 			&_share, &_toggleCompare {
 				margin: 0px 10px;
